kubernetes/network-policies/allow-egress-result.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-result
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: result
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
  - ports:
    - protocol: UDP
      port: 53
