kubernetes/network-policies/allow-egress-voteapp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-voteapp
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: vote-app
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
  - ports:
    - protocol: UDP
      port: 53
